chore: exclude AI tooling files from repository
Add .taskmaster/, CLAUDE.md, .claude/, opencode.json, and .mcp.json to
.gitignore to keep the repository focused on application code. Project
documentation (PROJECT.md, DEVIATIONS.md) remains tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@ minikube-linux-amd64
 
 # Streamlit
 .streamlit/secrets.toml
+
+# AI tooling and workflow files
+.taskmaster/
+CLAUDE.md
+.claude/
+opencode.json
+.mcp.json
