--- a/k8s/web-ui-deployment.yaml
+++ b/k8s/web-ui-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: web-ui
         image: web-ui:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 8501
           name: http
